--- a/packages/shared/styles/scss/vars.scss
+++ b/packages/shared/styles/scss/vars.scss
@@ -6,3 +6,11 @@
 $rad-lg: 0.5rem/* 8px */;
 $rad-md: 0.375rem/* 6px */; 
 $rad-sm: 0.125rem/* 2px */; 
+
+
+
+%shadow-xl {
+    --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
